# rviz2_cinematographer

./: README.md
docker/: Dockerfile  compose.yml  ros_entrypoint.sh
rviz2_cinematographer_gui/: CMakeLists.txt  package.xml  plugin.xml
rviz2_cinematographer_gui/include/rviz2_cinematographer_gui/: rviz2_cinematographer_gui.h  utils.h
rviz2_cinematographer_gui/src/: plugins.cpp  rviz2_cinematographer_gui.cpp  rviz2_cinematographer_gui.ui
rviz2_cinematographer_msgs/: CMakeLists.txt  package.xml
rviz2_cinematographer_msgs/msg/: CameraMovement.msg
rviz2_cinematographer_view_controller/: CMakeLists.txt  package.xml  plugin_description.xml
rviz2_cinematographer_view_controller/include/rviz2_cinematographer_view_controller/: rviz2_cinematographer_view_controller.h
rviz2_cinematographer_view_controller/src/: rviz2_cinematographer_view_controller.cpp
