<package format="3">
  <name>rviz2_cinematographer_view_controller</name>
  <version>0.1.1</version>
  <description>An rviz view controller featuring smooth transitions.</description>
  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <author email="s6jarazl@uni-bonn.de">Jan Razlaw</author>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>
  <depend>rviz2_cinematographer_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>
  <depend>Boost</depend>
  <depend>Eigen3</depend>
  <depend>OGRE</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
